--- a/templates/core/landing.html
+++ b/templates/core/landing.html
@@ -55,7 +55,7 @@
                 </p>
                 <p class="lead">
                     <a href="{% url "schema-swagger-ui" %}" class="btn btn-lg btn-light fw-bold border-white bg-white">View Doc</a>
-                    <a href="{% url "schema-swagger-ui" %}" class="btn btn-lg btn-light fw-bold border-white bg-white">Github Repo</a>
+                    <a href="https://github.com/Michael-Lyon/radeur/tree/main" class="btn btn-lg btn-light fw-bold border-white bg-white">Github Repo</a>
                 </p>
             </main>
 
